--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -31,7 +31,7 @@ jobs:
       uses: github/codeql-action/init@v2
       with:
         languages: ${{ matrix.language }}
-        packs: +advanced-security/codeql-${{ matrix.language }}@latest
+        queries: advanced-security/codeql-queries/${{ matrix.language }}/suites/codeql-${{ matrix.language }}.qls@main
     
     - if: matrix.language == 'java'  
       name: Set up java 17
